--- a/blocks/form.css
+++ b/blocks/form.css
@@ -31,7 +31,7 @@
   text-indent: 20px;
 }
 
-.form__input[type="datetime-local"] {
+.form__input_content_date-time {
   font-size: 20px;
   line-height: 30px;
   color: #838383;
@@ -40,7 +40,7 @@
 
 .form__button {
   padding: 0;
-  border-radius: 2px;
+  border-radius: 4px;
   border-color: #2f80ed;
   color: #fff;
   height: 60px;
