--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,6 +10,7 @@
   position: relative;
   display: flex;
   flex-flow: column wrap;
+  z-index: 1;
 }
 
 .header__image {
@@ -18,6 +19,7 @@
   height: 568px;
   right: 5px;
   top: 124px;
+  z-index: -1;
 }
 
 .header__title {
@@ -26,7 +28,6 @@
   font-size: 60px;
   font-weight: 500;
   line-height: 72px;
-  z-index: 1;
 }
 
 .header__span-accent {
@@ -57,14 +58,14 @@
   margin-bottom: 40px;
 }
 
-.header__address {
-  margin-right: 80px;
-  margin-bottom: 40px;
-}
-
 .header__paragraph {
   font-weight: 500;
   margin: 0;
   z-index: 1;
   color: #838383;
+}
+
+.header__paragraph_content_address {
+  margin-right: 80px;
+  margin-bottom: 40px;
 }
