--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -32,4 +32,7 @@
   justify-content: center;
   gap: 100px;
   padding-bottom: 100px;
+  padding-left: 0;
+  margin: 0;
+  list-style-type: none;
 }
