--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -3,6 +3,7 @@
   justify-content: flex-end;
   font-weight: 500;
   padding-top: 30px;
+  padding-left: 0;
   margin: 0 80px 0 0;
   list-style-type: none;
   column-gap: 20px;
